--- a/build.gradle
+++ b/build.gradle
@@ -7,19 +7,34 @@ buildscript {
         jcenter();
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.3.0'
+        classpath 'com.android.tools.build:gradle:2.2.3'
     }
+}
+allprojects {
+    repositories {
+        jcenter()
+        mavenCentral()
+        maven {
+            url 'http://maven.aliyun.com/nexus/content/repositories/releases/'
+        }
+//        maven{
+//            url 'http://git.yizhibo.tv/android/mvn-repo/raw/master'
+//        }
+    }
+
+    // Set encoding
+    tasks.withType(JavaCompile) { options.encoding = "UTF-8" }
 }
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 23
+    compileSdkVersion 22
     buildToolsVersion "23.0.0"
 
     defaultConfig {
         applicationId "test2.guo.cn.scant"
         minSdkVersion 18
-        targetSdkVersion 23
+        targetSdkVersion 22
         versionCode 1
         versionName "1.0"
     }
@@ -36,5 +51,5 @@ dependencies {
 
     compile 'com.android.support:appcompat-v7:22.2.0'
     compile 'com.android.support:design:22.2.0'
-    compile 'com.google.zxing:core:3.2.1'
+    compile 'com.google.zxing:core:3.3.0'
 }
